--- a/style.css
+++ b/style.css
@@ -218,8 +218,9 @@ h3 {
 }
 
 p {
-    font-weight: 300;
-    font-style: normal;
+    font-family: "menca", sans-serif;
+font-weight: 700;
+font-style: normal;
 }
 
 .img {
